--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 Example/VIPERExample/VIPERExample.xcodeproj/xcuserdata/sergeypetrachkov.xcuserdatad/xcschemes/VIPERExample.xcscheme
+UserInterfaceState.xcuserstate
